--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="estilos.css" />
-    <title>Pasteleria Poe</title>
+    <title>Proba Ya!</title>
   </head>
   <body>
     <header>
@@ -13,7 +13,7 @@
         <a href="#" class="logo"> <img src="./assets/chef-logo.jpg" /></a>
         <nav>
           <a href="#somos-proya">Quienes Somos</a>
-          <a href="#nuestros-programas">Nuestros Productos</a>
+          <a href="#nuestros-productos">Nuestros Productos</a>
           <a href="#caracteristicas">Características</a>
         </nav>
       </div>
@@ -21,7 +21,123 @@
 
     <section id="hero">
       <h1>Elegimos los ingredientes <br />de primera Calidad</h1>
-      <button>CONSEGUILOS YA!</button>
+      <button>PEDILOS YA!</button>
     </section>
+
+    <section id="somos-proya">
+      <div class="container">
+        <div class="img-container"></div>
+
+        <div class="texto">
+          <h2>Somos <span class="color-acento">ProbaYa!</span></h2>
+          <p>
+            Con la app de delivery más usada de Latinoamérica, tu local puede
+            ser el local más elegido de tu zona. Súmate a la plataforma más
+            grande y llega a miles de nuevos clientes.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="nuestros-productos">
+      <div class="container">
+        <h2>Nuestros Productos</h2>
+        <div class="productos">
+          <!-- Primera carta -->
+          <div class="carta">
+            <h3>Pâtisserie</h3>
+            <p>
+              En la Patisserie, el chef Rodrigo Sueldo tiene auténticos manjares
+              franceses que se pueden degustar en el lugar o llevar a casa.
+            </p>
+            <button>+ Info</button>
+          </div>
+          <!-- Segunda carta -->
+          <div class="carta">
+            <h3>Heladeria</h3>
+            <p>
+              Entre sus nuevas ofertas están estos helados hechos con carbón
+              vegetal que tienen sabor a almendras. Lo mejor es que pueden
+              decorarse a gusto del consumidor
+            </p>
+            <button>+ Info</button>
+          </div>
+          <!-- Tercera carta -->
+          <div class="carta">
+            <h3>Catering</h3>
+            <p>
+              Cuentan con atención de un grupo de expertos en el sector. Para
+              ellos será todo un honor atenderlos en esta fecha tan especial.
+            </p>
+            <button>+ Info</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="caracteristicas">
+      <div class="container">
+        <ul>
+          <li>✔️ Casamientos</li>
+          <li>✔️ Eventos empresariales</li>
+          <li>✔️ Cumpleaños de 15</li>
+          <li>✔️ Reuniones y Despedidas</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="final">
+      <h2>Listo para pedir?</h2>
+      <button>PEDILO YA!</button>
+    </section>
+
+    <!-- Contacto -->
+    <section id="contacto" class="contacto">
+      <div class="datos parallax">
+        <div class="overlay"></div>
+        <div class="container">
+          <div class="blurb">
+            <h3>Escribenos</h3>
+            <p>pediloya@correo.com</p>
+          </div>
+          <div class="blurb">
+            <h3>Visitanos</h3>
+            <p>Calle Poe 123 #27 <br />Ciudad Bs As</p>
+          </div>
+          <div class="blurb">
+            <h3>Horario</h3>
+            <p>Martes a Domingo<br />11am - 12pm</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="formulario">
+        <form action="" class="formulario_contacto" name="formulario_contacto">
+          <div>
+            <div class="input-group">
+              <input type="text" id="nombre" name="nombre" />
+              <label class="label" for="nombre">Nombre</label>
+            </div>
+
+            <div class="input-group">
+              <input type="text" id="email" name="email" />
+              <label class="label" for="email">Correo electronico</label>
+            </div>
+
+            <div class="input-group">
+              <textarea name="mensaje" id="mensaje"></textarea>
+              <label class="label" for="mensaje">Mensaje</label>
+            </div>
+            <input type="submit" value="Enviar" />
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- Cierre contacto -->
+
+    <footer>
+      <div class="container">
+        <p>&copy; PediloYa 2023</p>
+      </div>
+    </footer>
   </body>
 </html>
