--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section id="somos-proya">
       <div class="container">
-        <!-- <div class="img-container"></div> -->
+        <div class="img-container"></div>
 
         <div class="texto">
           <h2>Somos <span class="color-acento">ProbaYa!</span></h2>
