--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- Contacto -->
     <section id="contacto">
       <div class="datos parallax">
-        <!-- <div class="overlay"></div> -->
+        <div class="overlay"></div>
         <div class="container">
           <div class="blurb">
             <h3>Escribenos</h3>
